# RDP-v16

./: settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SETUP.md  hexrdp_jni.c
app/src/main/java/com/gotohex/rdp/: HexRDPApp.kt
app/src/main/java/com/gotohex/rdp/data/db/: ConnectionLogDao.kt  DatabaseEncryptionMigrator.kt  DatabaseKeyProvider.kt  HexRdpDatabase.kt
app/src/main/java/com/gotohex/rdp/data/model/: RdpProfile.kt
app/src/main/java/com/gotohex/rdp/data/repository/: AppSettingsRepository.kt  ConnectionLogRepository.kt  RdpProfileRepository.kt
app/src/main/java/com/gotohex/rdp/di/: AppModule.kt
app/src/main/java/com/gotohex/rdp/rdp/native/: AFreeRdpBridge.kt
app/src/main/java/com/gotohex/rdp/rdp/protocol/: RdpRemoteAdapter.kt
app/src/main/java/com/gotohex/rdp/remote/: RemoteSessionFactory.kt  SshTunneledClient.kt
app/src/main/java/com/gotohex/rdp/security/: CryptoHelper.kt  EncryptedPrefsHelper.kt  PinHasher.kt  QuickConnectCache.kt
app/src/main/java/com/gotohex/rdp/ssh/protocol/: SshClient.kt  SshTunnelManager.kt
app/src/main/java/com/gotohex/rdp/transfer/: FileTransferManager.kt
app/src/main/java/com/gotohex/rdp/ui/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/gotohex/rdp/ui/components/: Components.kt  SwipeableCard.kt
app/src/main/java/com/gotohex/rdp/ui/screens/: AppLockScreen.kt  ConnectionHistoryScreen.kt  FileTransferScreen.kt  HomeScreen.kt  RdpSessionActivity.kt  RdpSessionService.kt  SecurityConfirmDialog.kt  SessionsScreen.kt  SettingsScreen.kt
app/src/main/java/com/gotohex/rdp/ui/theme/: Transitions.kt
app/src/main/java/com/gotohex/rdp/util/: LastFrameStore.kt  PowerOptimizationHelper.kt  RdpFileParser.kt  WakeOnLanManager.kt
app/src/main/java/com/gotohex/rdp/vnc/protocol/: VncClient.kt
app/src/main/java/com/undatech/opaque/: Connection.kt  RfbConnectable.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
gradle/: libs.versions.toml
